footer__progress-active-wrapper

--- a/account/edit-photo.html
+++ b/account/edit-photo.html
@@ -975,7 +975,7 @@
             </div>
             <div style="margin-top: 24px; margin-bottom: 24px;">
              <button type="button" class="_630kao" aria-expanded="false" aria-busy="false">
-              <div class="_hgs47m">
+              <div class="footer__progress-active-wrapper">
                <div class="_10ejfg4u"><div class="_18ilrswp">Changes &amp; cancellations</div></div>
                <div class="cell-middle">
                 <div class="_z7e3cb" style="transform: rotate(0deg);">
@@ -990,7 +990,7 @@
             <div style="margin-top: 0px; margin-bottom: 0px;"><div class="_7qp4lh"></div></div>
             <div style="margin-top: 24px; margin-bottom: 24px;">
              <button type="button" class="_630kao" aria-expanded="false" aria-busy="false">
-              <div class="_hgs47m">
+              <div class="footer__progress-active-wrapper">
                <div class="_10ejfg4u"><div class="_18ilrswp">Resolve a problem</div></div>
                <div class="cell-middle">
                 <div class="_z7e3cb" style="transform: rotate(0deg);">
@@ -1005,7 +1005,7 @@
             <div style="margin-top: 0px; margin-bottom: 0px;"><div class="_7qp4lh"></div></div>
             <div style="margin-top: 24px; margin-bottom: 24px;">
              <button type="button" class="_630kao" aria-expanded="false" aria-busy="false">
-              <div class="_hgs47m">
+              <div class="footer__progress-active-wrapper">
                <div class="_10ejfg4u"><div class="_18ilrswp">Prices &amp; fees</div></div>
                <div class="cell-middle">
                 <div class="_z7e3cb" style="transform: rotate(0deg);">
