--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -845,7 +845,7 @@
                   <div class="_12wueiun">
                     <div class="_sk7c4z">
                       <div class="_1053xi7"></div>
-                      <div class="_hgs47m">
+                      <div class="footer__progress-active-wrapper">
                         <div class="_17235gdu"></div>
                         <div class="_17erhr0e">
                           <div class="flex-items-center">
