--- a/messaging/messages.html
+++ b/messaging/messages.html
@@ -4043,7 +4043,7 @@
                                         </div>
                                         <div style="margin-top: 12px; margin-bottom: 12px;">
                                           <div>
-                                            <div class="_hgs47m">
+                                            <div class="footer__progress-active-wrapper">
                                               <div class="_10ejfg4u">
                                                 <div class="hero__title"><span>₱3,000.00 x 2 nights</span></div>
                                               </div>
@@ -4055,7 +4055,7 @@
                                         </div>
                                         <div style="margin-top: 12px; margin-bottom: 12px;">
                                           <div>
-                                            <div class="_hgs47m">
+                                            <div class="footer__progress-active-wrapper">
                                               <div class="_10ejfg4u">
                                                 <div class="hero__title"><span>Cleaning fee</span></div>
                                               </div>
@@ -4066,7 +4066,7 @@
                                         </div>
                                         <div style="margin-top: 12px; margin-bottom: 12px;">
                                           <div>
-                                            <div class="_hgs47m">
+                                            <div class="footer__progress-active-wrapper">
                                               <div class="_10ejfg4u">
                                                 <div class="hero__title"><span>Service fee</span></div>
                                               </div>
@@ -4081,7 +4081,7 @@
                                           <div class="_7qp4lh"></div>
                                         </div>
                                         <div>
-                                          <div class="_hgs47m">
+                                          <div class="footer__progress-active-wrapper">
                                             <div class="_10ejfg4u">
                                               <div class="btn-light__text"><span>Total</span></div>
                                             </div>
@@ -4097,7 +4097,7 @@
                                           <div class="_7qp4lh"></div>
                                         </div>
                                         <div class="_yoru23">
-                                          <div class="_hgs47m">
+                                          <div class="footer__progress-active-wrapper">
                                             <div class="_10ejfg4u">
                                               <div style="margin-bottom: 4px;">
                                                 <div class="btn-light__text">Always communicate through Airbnb</div>
