--- a/payments/payment.html
+++ b/payments/payment.html
@@ -4173,7 +4173,7 @@
                                                                     class="_1wcpnjd"
                                                                   >
                                                                     <div
-                                                                      class="_hgs47m"
+                                                                      class="footer__progress-active-wrapper"
                                                                     >
                                                                       <div
                                                                         class="va-middle"
@@ -4300,7 +4300,7 @@
                                                                     class="_1wcpnjd"
                                                                   >
                                                                     <div
-                                                                      class="_hgs47m"
+                                                                      class="footer__progress-active-wrapper"
                                                                     >
                                                                       <div
                                                                         class="va-middle"
@@ -4394,7 +4394,7 @@
                                                                     class="_1wcpnjd"
                                                                   >
                                                                     <div
-                                                                      class="_hgs47m"
+                                                                      class="footer__progress-active-wrapper"
                                                                     >
                                                                       <div
                                                                         class="va-middle"
