--- a/account/signup_login.html
+++ b/account/signup_login.html
@@ -1274,7 +1274,7 @@
                                                     </path>
                                                   </svg></div>
                                                 <div class="_1n9nq7g">
-                                                  <div class="_hgs47m">
+                                                  <div class="footer__progress-active-wrapper">
                                                     <div class="va-top-h">
                                                       <div class="_121z06r2"><span tabindex="-1">We can't send a code to
                                                           this phone number. Try using a different one.</span></div>
@@ -4654,7 +4654,7 @@
                                                   </path>
                                                 </svg></div>
                                               <div class="_1n9nq7g">
-                                                <div class="_hgs47m">
+                                                <div class="footer__progress-active-wrapper">
                                                   <div class="va-top-h">
                                                     <div class="_121z06r2"><span tabindex="-1">We can't send a code to
                                                         this phone number. Try using a different one.</span></div>
@@ -4671,7 +4671,7 @@
                                                   </path>
                                                 </svg></div>
                                               <div class="_1n9nq7g">
-                                                <div class="_hgs47m">
+                                                <div class="footer__progress-active-wrapper">
                                                   <div class="va-top-h">
                                                     <div class="_121z06r2"><span tabindex="-1">You’ve reached the max
                                                         confirmation attempts. Try again in 1 hour.</span></div>
