--- a/help/ticket-selection.html
+++ b/help/ticket-selection.html
@@ -343,7 +343,7 @@
                               <div class="-mx-2">
                                 <div class="_3zx37fj">
                                   <section>
-                                    <div class="_hgs47m">
+                                    <div class="footer__progress-active-wrapper">
                                       <div class="va-top-h">
                                         <div style="margin-bottom: 16px">
                                           <h1
