--- a/resource-center/article.html
+++ b/resource-center/article.html
@@ -34,9 +34,9 @@
             <div class="_ousp44">
               <header role="banner" class="_1eqc9dx">
                 <div class="_dd1xod">
-                  <div class="_hgs47m">
+                  <div class="footer__progress-active-wrapper">
                     <div class="cell-middle">
-                      <div class="_hgs47m">
+                      <div class="footer__progress-active-wrapper">
                         <div class="cell-middle">
                           <a
                             href="/?logo=1"
@@ -465,7 +465,7 @@
                             class="link-block"
                           >
                             <div class="_1u60u8g">
-                              <div class="_hgs47m">
+                              <div class="footer__progress-active-wrapper">
                                 <div class="_10ejfg4u">
                                   <div class="_144bqbg">Getting started</div>
                                 </div>
@@ -481,7 +481,7 @@
                             class="link-block"
                           >
                             <div class="_1u60u8g">
-                              <div class="_hgs47m">
+                              <div class="footer__progress-active-wrapper">
                                 <div class="_10ejfg4u">
                                   <div class="_144bqbg">
                                     Attracting bookings
@@ -499,7 +499,7 @@
                             class="link-block"
                           >
                             <div class="_1u60u8g">
-                              <div class="_hgs47m">
+                              <div class="footer__progress-active-wrapper">
                                 <div class="_10ejfg4u">
                                   <div class="_144bqbg">
                                     Providing a 5-star Experience
@@ -517,7 +517,7 @@
                             class="link-block"
                           >
                             <div class="_1u60u8g">
-                              <div class="_hgs47m">
+                              <div class="footer__progress-active-wrapper">
                                 <div class="_10ejfg4u">
                                   <div class="_144bqbg">
                                     Responsible hosting
@@ -535,7 +535,7 @@
                             class="link-block"
                           >
                             <div class="_1u60u8g">
-                              <div class="_hgs47m">
+                              <div class="footer__progress-active-wrapper">
                                 <div class="_10ejfg4u">
                                   <div class="_144bqbg">Online Experiences</div>
                                 </div>
@@ -565,7 +565,7 @@
                             class="link-block"
                           >
                             <div class="_1u60u8g">
-                              <div class="_hgs47m">
+                              <div class="footer__progress-active-wrapper">
                                 <div class="_10ejfg4u">
                                   <div class="_144bqbg">
                                     News and updates for Experiences
@@ -587,7 +587,7 @@
                       class="link-block"
                     >
                       <div class="_1u60u8g">
-                        <div class="_hgs47m">
+                        <div class="footer__progress-active-wrapper">
                           <div class="_10ejfg4u">
                             <div class="_144bqbg">Become a host</div>
                           </div>
@@ -635,7 +635,7 @@
                         class="link-block"
                       >
                         <div class="_1u60u8g">
-                          <div class="_hgs47m">
+                          <div class="footer__progress-active-wrapper">
                             <div class="_10ejfg4u">
                               <div class="_144bqbg">Profile</div>
                             </div>
@@ -670,7 +670,7 @@
                         class="link-block"
                       >
                         <div class="_1u60u8g">
-                          <div class="_hgs47m">
+                          <div class="footer__progress-active-wrapper">
                             <div class="_10ejfg4u">
                               <div class="_144bqbg">Settings</div>
                             </div>
@@ -719,7 +719,7 @@
                         class="link-block"
                       >
                         <div class="_1u60u8g">
-                          <div class="_hgs47m">
+                          <div class="footer__progress-active-wrapper">
                             <div class="_10ejfg4u">
                               <div class="_144bqbg">Get help</div>
                             </div>
@@ -768,7 +768,7 @@
                         class="link-block"
                       >
                         <div class="_1u60u8g">
-                          <div class="_hgs47m">
+                          <div class="footer__progress-active-wrapper">
                             <div class="_10ejfg4u">
                               <div class="_144bqbg">English (US)</div>
                             </div>
@@ -803,7 +803,7 @@
                         class="link-block"
                       >
                         <div class="_1u60u8g">
-                          <div class="_hgs47m">
+                          <div class="footer__progress-active-wrapper">
                             <div class="_10ejfg4u">
                               <div class="_144bqbg">₱ PHP</div>
                             </div>
@@ -1247,7 +1247,7 @@
                             </div>
                           </div>
                           <div class="mb-10">
-                              <div class="_hgs47m">
+                              <div class="footer__progress-active-wrapper">
                                   <div class="cell-middle">
                                       <div class="relative" style="height:48px;width:48px;display:block">
                                           <div class="_bytwsb">
