--- a/resource-center/resources.html
+++ b/resource-center/resources.html
@@ -33,9 +33,9 @@
             <div class="_ousp44">
               <header role="banner" class="_1eqc9dx">
                 <div class="_dd1xod">
-                  <div class="_hgs47m">
+                  <div class="footer__progress-active-wrapper">
                     <div class="cell-middle">
-                      <div class="_hgs47m">
+                      <div class="footer__progress-active-wrapper">
                         <div class="cell-middle">
                           <a
                             href="/?logo=1"
@@ -464,7 +464,7 @@
                             class="link-block"
                           >
                             <div class="_1u60u8g">
-                              <div class="_hgs47m">
+                              <div class="footer__progress-active-wrapper">
                                 <div class="_10ejfg4u">
                                   <div class="_144bqbg">Getting started</div>
                                 </div>
@@ -480,7 +480,7 @@
                             class="link-block"
                           >
                             <div class="_1u60u8g">
-                              <div class="_hgs47m">
+                              <div class="footer__progress-active-wrapper">
                                 <div class="_10ejfg4u">
                                   <div class="_144bqbg">
                                     Attracting bookings
@@ -498,7 +498,7 @@
                             class="link-block"
                           >
                             <div class="_1u60u8g">
-                              <div class="_hgs47m">
+                              <div class="footer__progress-active-wrapper">
                                 <div class="_10ejfg4u">
                                   <div class="_144bqbg">
                                     Providing a 5-star Experience
@@ -516,7 +516,7 @@
                             class="link-block"
                           >
                             <div class="_1u60u8g">
-                              <div class="_hgs47m">
+                              <div class="footer__progress-active-wrapper">
                                 <div class="_10ejfg4u">
                                   <div class="_144bqbg">
                                     Responsible hosting
@@ -534,7 +534,7 @@
                             class="link-block"
                           >
                             <div class="_1u60u8g">
-                              <div class="_hgs47m">
+                              <div class="footer__progress-active-wrapper">
                                 <div class="_10ejfg4u">
                                   <div class="_144bqbg">Online Experiences</div>
                                 </div>
@@ -564,7 +564,7 @@
                             class="link-block"
                           >
                             <div class="_1u60u8g">
-                              <div class="_hgs47m">
+                              <div class="footer__progress-active-wrapper">
                                 <div class="_10ejfg4u">
                                   <div class="_144bqbg">
                                     News and updates for Experiences
@@ -586,7 +586,7 @@
                       class="link-block"
                     >
                       <div class="_1u60u8g">
-                        <div class="_hgs47m">
+                        <div class="footer__progress-active-wrapper">
                           <div class="_10ejfg4u">
                             <div class="_144bqbg">Become a host</div>
                           </div>
@@ -634,7 +634,7 @@
                         class="link-block"
                       >
                         <div class="_1u60u8g">
-                          <div class="_hgs47m">
+                          <div class="footer__progress-active-wrapper">
                             <div class="_10ejfg4u">
                               <div class="_144bqbg">Profile</div>
                             </div>
@@ -669,7 +669,7 @@
                         class="link-block"
                       >
                         <div class="_1u60u8g">
-                          <div class="_hgs47m">
+                          <div class="footer__progress-active-wrapper">
                             <div class="_10ejfg4u">
                               <div class="_144bqbg">Settings</div>
                             </div>
@@ -718,7 +718,7 @@
                         class="link-block"
                       >
                         <div class="_1u60u8g">
-                          <div class="_hgs47m">
+                          <div class="footer__progress-active-wrapper">
                             <div class="_10ejfg4u">
                               <div class="_144bqbg">Get help</div>
                             </div>
@@ -767,7 +767,7 @@
                         class="link-block"
                       >
                         <div class="_1u60u8g">
-                          <div class="_hgs47m">
+                          <div class="footer__progress-active-wrapper">
                             <div class="_10ejfg4u">
                               <div class="_144bqbg">English (US)</div>
                             </div>
@@ -802,7 +802,7 @@
                         class="link-block"
                       >
                         <div class="_1u60u8g">
-                          <div class="_hgs47m">
+                          <div class="footer__progress-active-wrapper">
                             <div class="_10ejfg4u">
                               <div class="_144bqbg">₱ PHP</div>
                             </div>
