--- a/resource-center/topic.html
+++ b/resource-center/topic.html
@@ -35,9 +35,9 @@
             <div class="_ousp44">
               <header role="banner" class="_1eqc9dx">
                 <div class="_dd1xod">
-                  <div class="_hgs47m">
+                  <div class="footer__progress-active-wrapper">
                     <div class="cell-middle">
-                      <div class="_hgs47m">
+                      <div class="footer__progress-active-wrapper">
                         <div class="cell-middle">
                           <a
                             href="/?logo=1"
@@ -466,7 +466,7 @@
                             class="link-block"
                           >
                             <div class="_1u60u8g">
-                              <div class="_hgs47m">
+                              <div class="footer__progress-active-wrapper">
                                 <div class="_10ejfg4u">
                                   <div class="_144bqbg">Getting started</div>
                                 </div>
@@ -482,7 +482,7 @@
                             class="link-block"
                           >
                             <div class="_1u60u8g">
-                              <div class="_hgs47m">
+                              <div class="footer__progress-active-wrapper">
                                 <div class="_10ejfg4u">
                                   <div class="_144bqbg">
                                     Attracting bookings
@@ -500,7 +500,7 @@
                             class="link-block"
                           >
                             <div class="_1u60u8g">
-                              <div class="_hgs47m">
+                              <div class="footer__progress-active-wrapper">
                                 <div class="_10ejfg4u">
                                   <div class="_144bqbg">
                                     Providing a 5-star Experience
@@ -518,7 +518,7 @@
                             class="link-block"
                           >
                             <div class="_1u60u8g">
-                              <div class="_hgs47m">
+                              <div class="footer__progress-active-wrapper">
                                 <div class="_10ejfg4u">
                                   <div class="_144bqbg">
                                     Responsible hosting
@@ -536,7 +536,7 @@
                             class="link-block"
                           >
                             <div class="_1u60u8g">
-                              <div class="_hgs47m">
+                              <div class="footer__progress-active-wrapper">
                                 <div class="_10ejfg4u">
                                   <div class="_144bqbg">Online Experiences</div>
                                 </div>
@@ -566,7 +566,7 @@
                             class="link-block"
                           >
                             <div class="_1u60u8g">
-                              <div class="_hgs47m">
+                              <div class="footer__progress-active-wrapper">
                                 <div class="_10ejfg4u">
                                   <div class="_144bqbg">
                                     News and updates for Experiences
@@ -588,7 +588,7 @@
                       class="link-block"
                     >
                       <div class="_1u60u8g">
-                        <div class="_hgs47m">
+                        <div class="footer__progress-active-wrapper">
                           <div class="_10ejfg4u">
                             <div class="_144bqbg">Become a host</div>
                           </div>
@@ -636,7 +636,7 @@
                         class="link-block"
                       >
                         <div class="_1u60u8g">
-                          <div class="_hgs47m">
+                          <div class="footer__progress-active-wrapper">
                             <div class="_10ejfg4u">
                               <div class="_144bqbg">Profile</div>
                             </div>
@@ -671,7 +671,7 @@
                         class="link-block"
                       >
                         <div class="_1u60u8g">
-                          <div class="_hgs47m">
+                          <div class="footer__progress-active-wrapper">
                             <div class="_10ejfg4u">
                               <div class="_144bqbg">Settings</div>
                             </div>
@@ -720,7 +720,7 @@
                         class="link-block"
                       >
                         <div class="_1u60u8g">
-                          <div class="_hgs47m">
+                          <div class="footer__progress-active-wrapper">
                             <div class="_10ejfg4u">
                               <div class="_144bqbg">Get help</div>
                             </div>
@@ -769,7 +769,7 @@
                         class="link-block"
                       >
                         <div class="_1u60u8g">
-                          <div class="_hgs47m">
+                          <div class="footer__progress-active-wrapper">
                             <div class="_10ejfg4u">
                               <div class="_144bqbg">English (US)</div>
                             </div>
@@ -804,7 +804,7 @@
                         class="link-block"
                       >
                         <div class="_1u60u8g">
-                          <div class="_hgs47m">
+                          <div class="footer__progress-active-wrapper">
                             <div class="_10ejfg4u">
                               <div class="_144bqbg">₱ PHP</div>
                             </div>
@@ -992,7 +992,7 @@
                             </div>
                             <div class="_1hst5ub" style="margin-top:32px">
                                 <div style="margin-bottom:32px">
-                                    <div class="_hgs47m">
+                                    <div class="footer__progress-active-wrapper">
                                         <div class="_tswrdl1">
                                             <div class="_1x0jb4k">
                                                 <div class=" dir dir-ltr" role="group" id="resourceCenter.topic.filterChipGroup"
