flex-items-center

--- a/become-a-host/welcome.html
+++ b/become-a-host/welcome.html
@@ -587,7 +587,7 @@
              </h1>
             </div>
             <div class="_rrmdgl">
-             <div class="_5kaapu">
+             <div class="flex-items-center">
               <button aria-label="More details" type="button" class="btn-close">
                <span class="relative">
                 <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 16px; width: 16px; fill: currentcolor;">
@@ -795,7 +795,7 @@
              </h1>
             </div>
             <div class="_rrmdgl">
-             <div class="_5kaapu">
+             <div class="flex-items-center">
               <a target="_blank" aria-label="More details" href="/messaging/thread/1257117527?thread_type=host_referral" class="btn-close">
                <span class="relative">
                 <svg
