--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -2491,7 +2491,7 @@
                     </div>
                     <div class="_dyh67hw">Private groups only</div>
                     <div class="_i3mzil">
-                      <div class="_5kaapu">
+                      <div class="flex-items-center">
                         <span class="visually-hidden dir dir-ltr"
                           >From ₱4,674 per group</span
                         ><span aria-hidden="true"
@@ -2544,7 +2544,7 @@
                     </div>
                     <div class="_dyh67hw">Private groups only</div>
                     <div class="_i3mzil">
-                      <div class="_5kaapu">
+                      <div class="flex-items-center">
                         <span class="visually-hidden dir dir-ltr"
                           >From ₱4,674 per group</span
                         ><span aria-hidden="true"
@@ -2597,7 +2597,7 @@
                     </div>
                     <div class="_dyh67hw">Private groups only</div>
                     <div class="_i3mzil">
-                      <div class="_5kaapu">
+                      <div class="flex-items-center">
                         <span class="visually-hidden dir dir-ltr"
                           >From ₱4,674 per group</span
                         ><span aria-hidden="true"
@@ -2650,7 +2650,7 @@
                     </div>
                     <div class="_dyh67hw">Private groups only</div>
                     <div class="_i3mzil">
-                      <div class="_5kaapu">
+                      <div class="flex-items-center">
                         <span class="visually-hidden dir dir-ltr"
                           >From ₱4,674 per group</span
                         ><span aria-hidden="true"
@@ -2703,7 +2703,7 @@
                     </div>
                     <div class="_dyh67hw">Private groups only</div>
                     <div class="_i3mzil">
-                      <div class="_5kaapu">
+                      <div class="flex-items-center">
                         <span class="visually-hidden dir dir-ltr"
                           >From ₱4,674 per group</span
                         ><span aria-hidden="true"
@@ -2756,7 +2756,7 @@
                     </div>
                     <div class="_dyh67hw">Private groups only</div>
                     <div class="_i3mzil">
-                      <div class="_5kaapu">
+                      <div class="flex-items-center">
                         <span class="visually-hidden dir dir-ltr"
                           >From ₱4,674 per group</span
                         ><span aria-hidden="true"
@@ -2809,7 +2809,7 @@
                     </div>
                     <div class="_dyh67hw">Private groups only</div>
                     <div class="_i3mzil">
-                      <div class="_5kaapu">
+                      <div class="flex-items-center">
                         <span class="visually-hidden dir dir-ltr"
                           >From ₱4,674 per group</span
                         ><span aria-hidden="true"
@@ -2862,7 +2862,7 @@
                     </div>
                     <div class="_dyh67hw">Private groups only</div>
                     <div class="_i3mzil">
-                      <div class="_5kaapu">
+                      <div class="flex-items-center">
                         <span class="visually-hidden dir dir-ltr"
                           >From ₱4,674 per group</span
                         ><span aria-hidden="true"
@@ -11045,7 +11045,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                               </div>
                                                             </div>
                                                             <div class="_b453sy"><button type="button" class="btn-link-small">
-                                                                <div class="_5kaapu"><span class="mr-2"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
+                                                                <div class="flex-items-center"><span class="mr-2"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                                                       aria-hidden="true" role="presentation" focusable="false"
                                                                       style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 2; overflow: visible;">
                                                                       <g fill="none">
@@ -11158,7 +11158,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                             </div>
                                                           </div>
                                                           <div class="_b453sy"><button type="button" class="btn-link-small">
-                                                              <div class="_5kaapu"><span class="mr-2"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
+                                                              <div class="flex-items-center"><span class="mr-2"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                                                                     aria-hidden="true" role="presentation" focusable="false"
                                                                     style="display: block; fill: none; height: 16px; width: 16px; stroke: currentcolor; stroke-width: 2; overflow: visible;">
                                                                     <g fill="none">
