--- a/become-a-host/description.html
+++ b/become-a-host/description.html
@@ -535,7 +535,7 @@ Take a break and unwind at this peaceful oasis. Close to metro manila and in Cav
              </h1>
             </div>
             <div class="_rrmdgl">
-             <div class="_5kaapu">
+             <div class="flex-items-center">
               <button aria-label="More details" type="button" class="btn-close">
                <span class="relative">
                 <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 16px; width: 16px; fill: currentcolor;">
@@ -744,7 +744,7 @@ Take a break and unwind at this peaceful oasis. Close to metro manila and in Cav
              </h1>
             </div>
             <div class="_rrmdgl">
-             <div class="_5kaapu">
+             <div class="flex-items-center">
               <a target="_blank" aria-label="More details" href="/messaging/thread/1257117527?thread_type=host_referral" class="btn-close">
                <span class="relative">
                 <svg
