--- a/become-a-host/title.html
+++ b/become-a-host/title.html
@@ -528,7 +528,7 @@ Cheerful private villa with pool</textarea
              </h1>
             </div>
             <div class="_rrmdgl">
-             <div class="_5kaapu">
+             <div class="flex-items-center">
               <button aria-label="More details" type="button" class="btn-close">
                <span class="relative">
                 <svg viewBox="0 0 16 16" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation" focusable="false" style="display: block; height: 16px; width: 16px; fill: currentcolor;">
@@ -736,7 +736,7 @@ Cheerful private villa with pool</textarea
              </h1>
             </div>
             <div class="_rrmdgl">
-             <div class="_5kaapu">
+             <div class="flex-items-center">
               <a target="_blank" aria-label="More details" href="/messaging/thread/1257117527?thread_type=host_referral" class="btn-close">
                <span class="relative">
                 <svg
