--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -246,7 +246,7 @@
                                               </div>
                                             </div>
                                             <div class="_ekor09"><button type="button" class="_1ju7xj0j">
-                                                <div class="_5kaapu"><svg viewBox="0 0 16 16"
+                                                <div class="flex-items-center"><svg viewBox="0 0 16 16"
                                                     xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                     role="presentation" focusable="false"
                                                     style="display: block; height: 16px; width: 16px; fill: currentcolor;">
