--- a/payments/payment.html
+++ b/payments/payment.html
@@ -1301,7 +1301,7 @@
                                                 <div class="_b7b6bk">
                                                   <div class="_1qyi2pa">
                                                     <div class="_m4gvkxh">
-                                                      <div class="_5kaapu">Message the Host</div>
+                                                      <div class="flex-items-center">Message the Host</div>
                                                     </div>
                                                     <div class="_o7c33ig">Let the Host know why you're traveling and when you'll check in.</div>
                                                   </div>
@@ -1324,7 +1324,7 @@
                                               <div class="_b7b6bk">
                                                 <div class="_1qyi2pa">
                                                   <div class="_m4gvkxh">
-                                                    <div class="_5kaapu">Phone number</div>
+                                                    <div class="flex-items-center">Phone number</div>
                                                   </div>
                                                   <div class="_o7c33ig">Add and confirm your phone number to get trip updates.</div>
                                                 </div>
@@ -1345,7 +1345,7 @@
                                               <div class="_b7b6bk">
                                                 <div class="_1qyi2pa">
                                                   <div class="font-extrabold">
-                                                    <div class="_5kaapu">Profile photo</div>
+                                                    <div class="flex-items-center">Profile photo</div>
                                                   </div>
                                                   <div class="_o7c33ig">Hosts want to know who’s staying at their place.</div>
                                                 </div>
@@ -4739,7 +4739,7 @@
                                                 <div class="_b7b6bk">
                                                   <div class="_1qyi2pa">
                                                     <div class="_m4gvkxh">
-                                                      <div class="_5kaapu">Message the Host</div>
+                                                      <div class="flex-items-center">Message the Host</div>
                                                     </div>
                                                     <div class="_o7c33ig">Let the Host know why you're traveling and when you'll check in.</div>
                                                   </div>
@@ -4757,7 +4757,7 @@
                                               <div class="_b7b6bk">
                                                 <div class="_1qyi2pa">
                                                   <div class="font-extrabold">
-                                                    <div class="_5kaapu">Profile photo</div>
+                                                    <div class="flex-items-center">Profile photo</div>
                                                   </div>
                                                   <div class="_o7c33ig">Hosts want to know who’s staying at their place.</div>
                                                 </div>
@@ -4774,7 +4774,7 @@
                                               <div class="_b7b6bk">
                                                 <div class="_1qyi2pa">
                                                   <div class="_m4gvkxh">
-                                                    <div class="_5kaapu">Phone number</div>
+                                                    <div class="flex-items-center">Phone number</div>
                                                   </div>
                                                   <div class="_o7c33ig">Add and confirm your phone number to get trip updates.</div>
                                                 </div>
