--- a/help/feedback.html
+++ b/help/feedback.html
@@ -279,7 +279,7 @@
                   <div class="_h69t7tv">
                     <div class="czkr4ph dir dir-ltr">
                       <nav aria-label="breadcrumb">
-                        <ol class="b1wj0iwp dir dir-ltr"><li class="l79qg7k dir dir-ltr"><div class="tg0jqgn dir dir-ltr"><a href="/help/" class="_1sikdxcl"><div class="tg0jqgn dir dir-ltr">Home</div></a></div><span class="shiaxno dir dir-ltr"></span></li><li class="l79qg7k dir dir-ltr"><div class="tg0jqgn dir dir-ltr"><span class="c15y1379 dir dir-ltr">Feedback</span></div></li></ol>
+                        <ol class="b1wj0iwp dir dir-ltr"><li class="l79qg7k dir dir-ltr"><div class="tg0jqgn dir dir-ltr"><a href="/help/" class="text-link"><div class="tg0jqgn dir dir-ltr">Home</div></a></div><span class="shiaxno dir dir-ltr"></span></li><li class="l79qg7k dir dir-ltr"><div class="tg0jqgn dir dir-ltr"><span class="c15y1379 dir dir-ltr">Feedback</span></div></li></ol>
                       </nav>
                     </div>
                   </div>
