--- a/listings-product/gift.html
+++ b/listings-product/gift.html
@@ -399,7 +399,7 @@
                                         <h2 tabindex="-1" class="heading" elementtiming="LCP-target">Frequently asked&nbsp;questions</h2>
                                       </div>
                                       <div class="s3tiguw s1ptxv9j dir dir-ltr">For other questions visit our <a
-                                          href="/help/article/981/how-do-airbnb-gift-cards-work" class="_1sikdxcl">help center</a></div>
+                                          href="/help/article/981/how-do-airbnb-gift-cards-work" class="text-link">help center</a></div>
                                     </div>
                                     <div>
                                       <div class="rko5s4k dir dir-ltr">
@@ -547,7 +547,7 @@
                                               <div class="ebn7uav e1d7qei1 dir dir-ltr">
                                                 <div>
                                                   You'll be refunded to your original payment method in accordance with our
-                                                  <a href="/home/cancellation_policies" class="_1sikdxcl">cancellation policies</a>
+                                                  <a href="/home/cancellation_policies" class="text-link">cancellation policies</a>
                                                 </div>
                                               </div>
                                             </div>
@@ -616,7 +616,7 @@
                                         
                                       </div>
                                       <div class="s3tiguw dir dir-ltr">For other questions visit our <a href="/help/article/981/how-do-airbnb-gift-cards-work"
-                                          class="_1sikdxcl">help center</a></div>
+                                          class="text-link">help center</a></div>
                                     </div>
                                   </div>
                                 </section>
