--- a/listings-product/products-luxe.html
+++ b/listings-product/products-luxe.html
@@ -2943,7 +2943,7 @@
                                                 </div>
                                               </div>
                                               <div class="_y8lhwe"><a target="_blank" href="/luxury"
-                                                  class="_1sikdxcl"><span
+                                                  class="text-link"><span
                                                     class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"><span
                                                       class=" dir dir-ltr">Learn More</span><span
                                                       class="atm_gz_1y44olf dir dir-ltr"><svg viewBox="0 0 32 32"
@@ -12567,7 +12567,7 @@
                                               </div>
                                             </div>
                                             <div class="_y8lhwe"><a target="_blank" href="/luxury"
-                                                class="_1sikdxcl"><span
+                                                class="text-link"><span
                                                   class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"><span
                                                     class=" dir dir-ltr">Learn More</span><span
                                                     class="atm_gz_1y44olf dir dir-ltr"><svg viewBox="0 0 32 32"
@@ -24301,7 +24301,7 @@
                             <div class="_7ytxmo">
                               <div class="_ymq6as">Villa Cetinale</div>
                               <div class="_1fopc40"><a href="/s/Sovicille,Siena,Italy/luxury"
-                                  class="_1sikdxcl">Sovicille, Siena, Italy</a></div>
+                                  class="text-link">Sovicille, Siena, Italy</a></div>
                               <div style="
                       --pricing-guest-display-price-alignment: flex-start;
                       --pricing-guest-display-price-flex-wrap: wrap;
