--- a/listings-product/wishlist.html
+++ b/listings-product/wishlist.html
@@ -6852,7 +6852,7 @@
                             </div>
                           </div>
                           <div class="mt-2">As a reminder, anyone with the link can view this wishlist. <a target="_blank"
-                              href="/help/article/1236/how-do-i-manage-my-list-of-saved-homes" class="_1sikdxcl">Learn more</a>
+                              href="/help/article/1236/how-do-i-manage-my-list-of-saved-homes" class="text-link">Learn more</a>
                           </div>
                         </section>
                       </div>
@@ -7050,7 +7050,7 @@
                             </div>
                           </div>
                           <div class="mt-2">Once you share this link, anyone can view your wishlist. <a target="_blank"
-                              href="/help/article/1236/how-do-i-manage-my-list-of-saved-homes" class="_1sikdxcl">Learn more</a></div>
+                              href="/help/article/1236/how-do-i-manage-my-list-of-saved-homes" class="text-link">Learn more</a></div>
                         </section>
                       </div>
                       <div class="_88xxct"></div>
