--- a/payments/payment.html
+++ b/payments/payment.html
@@ -10714,7 +10714,7 @@
     </div>
   </div>
   <div class="_nt5bsb">
-    <a target="_blank" href="/help/article/2637" class="_1sikdxcl"
+    <a target="_blank" href="/help/article/2637" class="text-link"
       >Learn more about cancellation policies</a
     >
   </div>
