--- a/become-a-host/description.html
+++ b/become-a-host/description.html
@@ -573,7 +573,7 @@ Take a break and unwind at this peaceful oasis. Close to metro manila and in Cav
                            </svg>
                           </div>
                           <div class="_1eg8y1b">
-                           <span>You’re now matched with Myrna.</span>&nbsp;<a target="_blank" href="/help/article/3011/get-help-with-your-listing-from-a-superhost" class="_1sikdxcl"><span class="_1x9f0ie">Learn More</span></a>
+                           <span>You’re now matched with Myrna.</span>&nbsp;<a target="_blank" href="/help/article/3011/get-help-with-your-listing-from-a-superhost" class="text-link"><span class="_1x9f0ie">Learn More</span></a>
                           </div>
                          </div>
                         </div>
@@ -793,7 +793,7 @@ Take a break and unwind at this peaceful oasis. Close to metro manila and in Cav
                            </svg>
                           </div>
                           <div class="_1eg8y1b">
-                           <span>You’re now matched with Myrna.</span>&nbsp;<a href="/help/article/3011/get-help-with-your-listing-from-a-superhost" class="_1sikdxcl"><span class="_1x9f0ie">Learn More</span></a>
+                           <span>You’re now matched with Myrna.</span>&nbsp;<a href="/help/article/3011/get-help-with-your-listing-from-a-superhost" class="text-link"><span class="_1x9f0ie">Learn More</span></a>
                           </div>
                          </div>
                         </div>
