--- a/become-a-host/floor-plan.html
+++ b/become-a-host/floor-plan.html
@@ -706,7 +706,7 @@
                            </svg>
                           </div>
                           <div class="_1eg8y1b">
-                           <span>You’re now matched with Myrna.</span>&nbsp;<a target="_blank" href="/help/article/3011/get-help-with-your-listing-from-a-superhost" class="_1sikdxcl"><span class="_1x9f0ie">Learn More</span></a>
+                           <span>You’re now matched with Myrna.</span>&nbsp;<a target="_blank" href="/help/article/3011/get-help-with-your-listing-from-a-superhost" class="text-link"><span class="_1x9f0ie">Learn More</span></a>
                           </div>
                          </div>
                         </div>
@@ -925,7 +925,7 @@
                            </svg>
                           </div>
                           <div class="_1eg8y1b">
-                           <span>You’re now matched with Myrna.</span>&nbsp;<a href="/help/article/3011/get-help-with-your-listing-from-a-superhost" class="_1sikdxcl"><span class="_1x9f0ie">Learn More</span></a>
+                           <span>You’re now matched with Myrna.</span>&nbsp;<a href="/help/article/3011/get-help-with-your-listing-from-a-superhost" class="text-link"><span class="_1x9f0ie">Learn More</span></a>
                           </div>
                          </div>
                         </div>
