--- a/become-a-host/title.html
+++ b/become-a-host/title.html
@@ -566,7 +566,7 @@ Cheerful private villa with pool</textarea
                            </svg>
                           </div>
                           <div class="_1eg8y1b">
-                           <span>You’re now matched with Myrna.</span>&nbsp;<a target="_blank" href="/help/article/3011/get-help-with-your-listing-from-a-superhost" class="_1sikdxcl"><span class="_1x9f0ie">Learn More</span></a>
+                           <span>You’re now matched with Myrna.</span>&nbsp;<a target="_blank" href="/help/article/3011/get-help-with-your-listing-from-a-superhost" class="text-link"><span class="_1x9f0ie">Learn More</span></a>
                           </div>
                          </div>
                         </div>
@@ -785,7 +785,7 @@ Cheerful private villa with pool</textarea
                            </svg>
                           </div>
                           <div class="_1eg8y1b">
-                           <span>You’re now matched with Myrna.</span>&nbsp;<a href="/help/article/3011/get-help-with-your-listing-from-a-superhost" class="_1sikdxcl"><span class="_1x9f0ie">Learn More</span></a>
+                           <span>You’re now matched with Myrna.</span>&nbsp;<a href="/help/article/3011/get-help-with-your-listing-from-a-superhost" class="text-link"><span class="_1x9f0ie">Learn More</span></a>
                           </div>
                          </div>
                         </div>
