--- a/landing-pages/accessibility.html
+++ b/landing-pages/accessibility.html
@@ -255,8 +255,8 @@
                           <div class="_1rw28r4l">
                            <span class="f1dlg3jl dir dir-ltr">
                             It’s easy to use our search filters to only show the listings that have the accessibility features you need. Learn more about
-                            <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="_1sikdxcl">searching for stays with accessibility features</a> or
-                            <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="_1sikdxcl">searching for Experiences with accessibility features</a>.
+                            <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="text-link">searching for stays with accessibility features</a> or
+                            <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="text-link">searching for Experiences with accessibility features</a>.
                            </span>
                           </div>
                         </div>
@@ -289,8 +289,8 @@
                           <div class="_1rw28r4l">
                            <span class="f1dlg3jl dir dir-ltr">
                             It’s easy to use our search filters to only show the listings that have the accessibility features you need. Learn more about
-                            <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="_1sikdxcl">searching for stays with accessibility features</a> or
-                            <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="_1sikdxcl">searching for Experiences with accessibility features</a>.
+                            <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="text-link">searching for stays with accessibility features</a> or
+                            <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="text-link">searching for Experiences with accessibility features</a>.
                            </span>
                           </div>
                         </div>
@@ -323,8 +323,8 @@
                           <div class="_1rw28r4l">
                            <span class="f1dlg3jl dir dir-ltr">
                             It’s easy to use our search filters to only show the listings that have the accessibility features you need. Learn more about
-                            <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="_1sikdxcl">searching for stays with accessibility features</a> or
-                            <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="_1sikdxcl">searching for Experiences with accessibility features</a>.
+                            <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="text-link">searching for stays with accessibility features</a> or
+                            <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="text-link">searching for Experiences with accessibility features</a>.
                            </span>
                           </div>
                         </div>
@@ -357,8 +357,8 @@
                           <div class="_1rw28r4l">
                            <span class="f1dlg3jl dir dir-ltr">
                             It’s easy to use our search filters to only show the listings that have the accessibility features you need. Learn more about
-                            <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="_1sikdxcl">searching for stays with accessibility features</a> or
-                            <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="_1sikdxcl">searching for Experiences with accessibility features</a>.
+                            <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="text-link">searching for stays with accessibility features</a> or
+                            <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="text-link">searching for Experiences with accessibility features</a>.
                            </span>
                           </div>
                         </div>
@@ -391,8 +391,8 @@
                           <div class="_1rw28r4l">
                            <span class="f1dlg3jl dir dir-ltr">
                             It’s easy to use our search filters to only show the listings that have the accessibility features you need. Learn more about
-                            <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="_1sikdxcl">searching for stays with accessibility features</a> or
-                            <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="_1sikdxcl">searching for Experiences with accessibility features</a>.
+                            <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="text-link">searching for stays with accessibility features</a> or
+                            <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="text-link">searching for Experiences with accessibility features</a>.
                            </span>
                           </div>
                         </div>
@@ -425,8 +425,8 @@
                           <div class="_1rw28r4l">
                            <span class="f1dlg3jl dir dir-ltr">
                             It’s easy to use our search filters to only show the listings that have the accessibility features you need. Learn more about
-                            <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="_1sikdxcl">searching for stays with accessibility features</a> or
-                            <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="_1sikdxcl">searching for Experiences with accessibility features</a>.
+                            <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="text-link">searching for stays with accessibility features</a> or
+                            <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="text-link">searching for Experiences with accessibility features</a>.
                            </span>
                           </div>
                         </div>
@@ -718,8 +718,8 @@
                             <div class="_1rw28r4l">
                              <span class="f1dlg3jl dir dir-ltr">
                               It’s easy to use our search filters to only show the listings that have the accessibility features you need. Learn more about
-                              <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="_1sikdxcl">searching for stays with accessibility features</a> or
-                              <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="_1sikdxcl">searching for Experiences with accessibility features</a>.
+                              <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="text-link">searching for stays with accessibility features</a> or
+                              <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="text-link">searching for Experiences with accessibility features</a>.
                              </span>
                             </div>
                           </div>
@@ -753,8 +753,8 @@
                             <div class="_1rw28r4l">
                              <span class="f1dlg3jl dir dir-ltr">
                               It’s easy to use our search filters to only show the listings that have the accessibility features you need. Learn more about
-                              <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="_1sikdxcl">searching for stays with accessibility features</a> or
-                              <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="_1sikdxcl">searching for Experiences with accessibility features</a>.
+                              <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="text-link">searching for stays with accessibility features</a> or
+                              <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="text-link">searching for Experiences with accessibility features</a>.
                              </span>
                             </div>
                           </div>
@@ -788,8 +788,8 @@
                             <div class="_1rw28r4l">
                              <span class="f1dlg3jl dir dir-ltr">
                               It’s easy to use our search filters to only show the listings that have the accessibility features you need. Learn more about
-                              <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="_1sikdxcl">searching for stays with accessibility features</a> or
-                              <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="_1sikdxcl">searching for Experiences with accessibility features</a>.
+                              <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="text-link">searching for stays with accessibility features</a> or
+                              <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="text-link">searching for Experiences with accessibility features</a>.
                              </span>
                             </div>
                           </div>
@@ -822,8 +822,8 @@
                             <div class="_1rw28r4l">
                              <span class="f1dlg3jl dir dir-ltr">
                               It’s easy to use our search filters to only show the listings that have the accessibility features you need. Learn more about
-                              <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="_1sikdxcl">searching for stays with accessibility features</a> or
-                              <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="_1sikdxcl">searching for Experiences with accessibility features</a>.
+                              <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="text-link">searching for stays with accessibility features</a> or
+                              <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="text-link">searching for Experiences with accessibility features</a>.
                              </span>
                             </div>
                           </div>
@@ -856,8 +856,8 @@
                             <div class="_1rw28r4l">
                              <span class="f1dlg3jl dir dir-ltr">
                               It’s easy to use our search filters to only show the listings that have the accessibility features you need. Learn more about
-                              <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="_1sikdxcl">searching for stays with accessibility features</a> or
-                              <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="_1sikdxcl">searching for Experiences with accessibility features</a>.
+                              <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="text-link">searching for stays with accessibility features</a> or
+                              <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="text-link">searching for Experiences with accessibility features</a>.
                              </span>
                             </div>
                           </div>
@@ -890,8 +890,8 @@
                             <div class="_1rw28r4l">
                              <span class="f1dlg3jl dir dir-ltr">
                               It’s easy to use our search filters to only show the listings that have the accessibility features you need. Learn more about
-                              <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="_1sikdxcl">searching for stays with accessibility features</a> or
-                              <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="_1sikdxcl">searching for Experiences with accessibility features</a>.
+                              <a target="_blank" href="/help/article/2000/search-for-places-with-accessibility-features" class="text-link">searching for stays with accessibility features</a> or
+                              <a target="_blank" href="/help/article/3138/search-for-experiences-with-accessibility-features" class="text-link">searching for Experiences with accessibility features</a>.
                              </span>
                             </div>
                           </div>
