--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -1525,7 +1525,7 @@
                                                           </svg></div><span>To protect your payment, never transfer money or communicate outside of the Airbnb
                                                           website or app. <a rel="noopener noreferrer" target="_blank"
                                                             href="https://www.airbnb.com/help/article/199/what-should-i-do-if-someone-asks-me-to-pay-outside-of-the-airbnb-website"
-                                                            class="_1sikdxcl">Learn more</a></span>
+                                                            class="text-link">Learn more</a></span>
                                                       </div>
                                                     </div>
                                                   </section>
@@ -6408,7 +6408,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                           </svg></div><span>To protect your payment, never transfer money or communicate outside of the Airbnb
                                                           website or app. <a rel="noopener noreferrer" target="_blank"
                                                             href="https://www.airbnb.com/help/article/199/what-should-i-do-if-someone-asks-me-to-pay-outside-of-the-airbnb-website"
-                                                            class="_1sikdxcl">Learn more</a></span>
+                                                            class="text-link">Learn more</a></span>
                                                       </div>
                                                     </div>
                                                   </section>
@@ -6530,7 +6530,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                 <div class="_udw1qr">
                                                                   <div><a aria-describedby="sideBar-availability-title-48155568 sideBar-availability-subtitle-48155568" data-modal="#choose-modal"
 
-                                                                      class="_1sikdxcl">Book for a private group</a></div>
+                                                                      class="text-link">Book for a private group</a></div>
                                                                 </div>
                                                               </div>
                                                               <div>
@@ -6559,7 +6559,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                 <div class="_udw1qr">
                                                                   <div><a aria-describedby="sideBar-availability-title-48155569 sideBar-availability-subtitle-48155569"
                                                                       href="/book/experiences/create/3134396?guestCounts%5BnumberOfAdults%5D=1&amp;guestCounts%5BnumberOfChildren%5D=0&amp;guestCounts%5BnumberOfInfants%5D=0&amp;experienceId=3134396&amp;experienceListingAvailabilityId=48155569&amp;isExperiencesPrivateBooking=true&amp;bookingSource=PDP"
-                                                                      class="_1sikdxcl" data-modal="#choose-modal">Book for a private group</a></div>
+                                                                      class="text-link" data-modal="#choose-modal">Book for a private group</a></div>
                                                                 </div>
                                                               </div>
                                                               <div>
@@ -6587,7 +6587,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                 <div class="_udw1qr">
                                                                   <div><a aria-describedby="sideBar-availability-title-48155570 sideBar-availability-subtitle-48155570"
                                                                       href="/book/experiences/create/3134396?guestCounts%5BnumberOfAdults%5D=1&amp;guestCounts%5BnumberOfChildren%5D=0&amp;guestCounts%5BnumberOfInfants%5D=0&amp;experienceId=3134396&amp;experienceListingAvailabilityId=48155570&amp;isExperiencesPrivateBooking=true&amp;bookingSource=PDP"
-                                                                      class="_1sikdxcl" data-modal="#choose-modal">Book for a private group</a></div>
+                                                                      class="text-link" data-modal="#choose-modal">Book for a private group</a></div>
                                                                 </div>
                                                               </div>
                                                               <div>
@@ -7048,7 +7048,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                               </div>
                                                               <div class="_166d2jm"><span id="phone-number-help-text-phoneNumber">We’ll call or text you to confirm
                                                                   your number. Standard message and data rates apply. <a target="_blank"
-                                                                    href="/terms/privacy_policy?source=signup" class="_1sikdxcl">Privacy Policy</a></span></div>
+                                                                    href="/terms/privacy_policy?source=signup" class="text-link">Privacy Policy</a></span></div>
                                                               <div id="airlock-inline-container" aria-live="polite"></div>
                                                               <div class="_1n35162"><button data-testid="signup-login-submit-btn" type="submit" class="_6hkhatt"
                                                                   data-veloute="submit-btn-cypress"><span class="_jxxpcd"><span class="_kaq6tx"
@@ -8920,7 +8920,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                           start time for a full refund, or within 24 hours of booking as long as the booking is made
                           more than 48 hours before the start time.</span></div>
                       <div class="mt-6"><a href="/help/article/1593/what-is-the-experiences-cancellation-policy"
-                          class="_1sikdxcl"><span
+                          class="text-link"><span
                             class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"><span
                               class=" dir dir-ltr">Show more</span><span class="atm_gz_1y44olf dir dir-ltr"><svg
                                 viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" role="presentation"
@@ -11003,7 +11003,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                       <div class="_1f5fwtp">Contact Kat for dates and times not listed, or if you want to book for a larger group.<div
                                                           class="mt-4"><a
                                                             href="/experiences/3134396?currentTab=experience_tab&amp;federatedSearchId=980d5071-b471-463d-8db8-77c0c27bf75e&amp;searchId=f9cea4e8-a387-4f32-8a6a-7fb61adec6e2&amp;sectionId=00d92247-d2bf-4f39-96ee-2fcdea1649a6&amp;source=p2&amp;modal=LEGACY_CONTACT_HOST&amp;adults=1&amp;modalItem=select_booking_type"
-                                                            class="_1sikdxcl">Request availability</a></div>
+                                                            class="text-link">Request availability</a></div>
                                                       </div>
                                                       <div class="_19tazlf">
                                                         <div class=" dir dir-ltr" role="group" id="trip_details" aria-labelledby="trip_details-DLS-chipGroup-label">
@@ -11040,7 +11040,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                                 <div class="_j54sqr">
                                                                   <div><a
                                                                       href="/book/experiences/create/3134396?guestCounts%5BnumberOfAdults%5D=1&amp;guestCounts%5BnumberOfChildren%5D=0&amp;guestCounts%5BnumberOfInfants%5D=0&amp;experienceId=3134396&amp;experienceListingAvailabilityId=48155570&amp;isExperiencesPrivateBooking=true&amp;bookingSource=PDP"
-                                                                      class="_1sikdxcl">Book for a private group</a></div>
+                                                                      class="text-link">Book for a private group</a></div>
                                                                 </div>
                                                               </div>
                                                             </div>
@@ -11153,7 +11153,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                               <div class="_j54sqr">
                                                                 <div><a
                                                                     href="/book/experiences/create/3134396?guestCounts%5BnumberOfAdults%5D=1&amp;guestCounts%5BnumberOfChildren%5D=0&amp;guestCounts%5BnumberOfInfants%5D=0&amp;experienceId=3134396&amp;experienceListingAvailabilityId=48155570&amp;isExperiencesPrivateBooking=true&amp;bookingSource=PDP"
-                                                                    class="_1sikdxcl">Book for a private group</a></div>
+                                                                    class="text-link">Book for a private group</a></div>
                                                               </div>
                                                             </div>
                                                           </div>
