--- a/payments/payment-success.html
+++ b/payments/payment-success.html
@@ -319,7 +319,7 @@
                                       </div>
                                       <div class="_9dd4bh"></div>
                                       <div class="_vgy0rw">
-                                        <a rel="noopener noreferrer" target="_blank" href="https://www.airbnb.com/experience_reservations/add_to_external_calendar/TAZQZJKB?calendar_type=g_cal&amp;source=p5" class="_1sikdxcl"><span class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"><span class="atm_h0_1y44olf dir dir-ltr"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" style="
+                                        <a rel="noopener noreferrer" target="_blank" href="https://www.airbnb.com/experience_reservations/add_to_external_calendar/TAZQZJKB?calendar_type=g_cal&amp;source=p5" class="text-link"><span class="d-inline-flex atm_vh_yfq0k3 atm_ar_vrvcex atm_h_1h6ojuz dir dir-ltr"><span class="atm_h0_1y44olf dir dir-ltr"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" style="
                                                   display: block;
                                                   height: 24px;
                                                   width: 24px;
