--- a/account/transaction_history.html
+++ b/account/transaction_history.html
@@ -117,7 +117,7 @@
                                                 <button
                                                   aria-label="Open hosting menu"
                                                   type="button"
-                                                  class="_1qi0sj8"
+                                                  class="btn-save"
                                                 >
                                                   <span class="relative">
                                                     <svg
