--- a/listings-product/products.html
+++ b/listings-product/products.html
@@ -13162,7 +13162,7 @@
                                                                         <div class="_owkz1m"><button
                                                                             data-modal="#keyboard-shortcuts-modal"
                                                                             aria-label="Open the keyboard shortcuts panel"
-                                                                            type="button" class="_1qi0sj8"><span
+                                                                            type="button" class="btn-save"><span
                                                                               class="relative"><svg viewBox="0 0 32 32"
                                                                                 xmlns="http://www.w3.org/2000/svg"
                                                                                 aria-hidden="true" role="presentation"
@@ -25268,7 +25268,7 @@
                                 </div>
                                 <div class="_16czla3">
                                   <div class="_1th9qvgy">
-                                    <button type="button" class="_1qi0sj8">
+                                    <button type="button" class="btn-save">
                                       <span class="carousel-slider__item-wrap"><svg viewBox="0 0 16 16"
                                           xmlns="http://www.w3.org/2000/svg" aria-label="Airbnb Belo" role="img"
                                           focusable="false" style="
