--- a/listings-product/online-experience.html
+++ b/listings-product/online-experience.html
@@ -6216,7 +6216,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                         <div data-key="Join a video call_0" class="h-full">
                                                           <div class="_qzp5rw5">
                                                             <div>
-                                                              <div class="_in41ap1"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
+                                                              <div class="mb-2"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                                   role="presentation" focusable="false"
                                                                   style="display: block; height: 32px; width: 32px; fill: currentcolor;">
                                                                   <path
@@ -6235,7 +6235,7 @@ Great for Team Building" class="l4a2xp4 dir dir-ltr" data-check-info-section="tr
                                                         <div data-key="Book a private group_1" class="h-full">
                                                           <div class="_qzp5rw5">
                                                             <div>
-                                                              <div class="_in41ap1"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
+                                                              <div class="mb-2"><svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg" aria-hidden="true"
                                                                   role="presentation" focusable="false"
                                                                   style="display: block; height: 32px; width: 32px; fill: currentcolor;">
                                                                   <path
